@startuml
title UC17 - Sơ đồ lớp (Tham gia cuộc gọi)
class CallSession {
  + start()
  + createOffer()
  + setRemoteDescription(desc)
  + addIceCandidate(cand)
}
class WebSocketClient {
  + send(type, payload)
  + onMessage()
}
class RTCConnection {
  + addTrack(track)
  + onIceCandidate(cand)
}
class SignalingEndpoint {
  + onMessage(session, msg)
}
CallSession --> RTCConnection
CallSession --> WebSocketClient
WebSocketClient --> SignalingEndpoint
@enduml